[package]
name = "renderling_test"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "renderling_native"
path = "src/main.rs"
# required-features = ["native"]

[features]
default = []
native = []

[dependencies]
winit = {version = "0.30"}
anyhow = "1.0.99"
wgpu = { version = "22.1.0", features = ["webgl"] }
pollster = "0.4.0"
renderling = { version = "0.4.9", features = ["gltf", "winit", "wasm"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
console_error_panic_hook = "0.1"
log = "0.4"
env_logger = "0.11.8"
console_log = "1.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window","Document","HtmlCanvasElement"] }
console_error_panic_hook = "0.1"
